[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "csv-fsm"
authors = [
    {name = "Jannic Holzer", email = "jannic.holzer@gmail.com"},
]
version = "0.1.0"
description = "A CSV reader and writer using finite state machines"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = ["csv_fsm"]
